--- a/HTML Project/CSS/shared.css
+++ b/HTML Project/CSS/shared.css
@@ -110,6 +110,7 @@ section {
 
 .menu-container {
     max-height: 340px;
+    width: 100%;
     margin: 0px auto;
         /* top, bottom = 0, left, right = auto */
     content: "";
